[gd_scene load_steps=3 format=3 uid="uid://dget4iex6vpe1"]

[ext_resource type="Script" path="res://Scripts/Utils/Menus/cheat_menu.gd" id="1_2yien"]
[ext_resource type="PackedScene" uid="uid://meu3hhsbxp2r" path="res://Prefabs/Utils/background.tscn" id="2_ilq4g"]

[node name="CheatMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_2yien")

[node name="Background" parent="." instance=ExtResource("2_ilq4g")]
opacity = 0.5

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.5
offset_top = -206.0
offset_right = 131.5
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ImortalButton" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "Imortal
"

[node name="NoScaleUpButton" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "No Scale Up"

[node name="NotSpawnEnemiesButton" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "Not Spawn Enemies"

[node name="SpawnPowerUpButton" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "Spawn Random Power Up"
autowrap_mode = 2
